--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,20 @@ body{
 }
 .bg-brand{
     background-color: #2d313d;
+    
 }
+.bg-brand-secondary{
+    background-color: #2d313d;
+    height: 70px;
+    width: 200px;
+    font-family:sans-serif;
+    font-size: 5px;
+    
+
+}
+
 .font{
-    font-size: 12px;
+    font-size: 14px;
 }
 .btn-clr{
     background-color:  #adbade;
@@ -14,4 +25,10 @@ body{
     border: none;
     font-size: 10px;
     padding:5px;
+}
+.algn{
+    align-items: center;
+}
+.head-font{
+    font-family: sans-serif;
 }
